View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029053 | Open CASCADE | OCCT:Configuration | public | 2017-08-25 17:57 | 2017-09-29 16:23 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.2.0 | ||||
Target Version | 7.2.0 | Fixed in Version | 7.2.0 | ||
Summary | 0029053: Configuration, CMake - fix env.bat for starting Draw Harness for MinGW build | ||||
Description | Currently env.bat exits with error for non-msvc compiler; this should be fixed. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR29053 has been created by kgv. SHA-1: 871ba1f99c2c043a107cac705c5bc31e9815be23 Detailed log of new commits: Author: kgv Date: Fri Aug 25 17:57:15 2017 +0300 0029053: Configuration, CMake - fix env.bat for starting Draw Harness for MinGW build |
|
Please take the patch. http://jenkins-test-10.nnov.opencascade.com/view/CR29053-CR29053-KGV |
|
Combination - OCCT branch : CR29053 - SHA-1: 871ba1f99c2c043a107cac705c5bc31e9815be23 Products branch : CR29053 - SHA-1: 7e86a646f39707c35dee4d41f4df197287d43e68 was compiled on Linux, MacOS and Windows platforms and tested on optimize mode. Number of compiler warnings: OCCT : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) Products : Linux: 4 (4 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences CPU differences: Windows: OCCT Total CPU difference: 17330.010689098726 / 17295.75286949859 [+0.20%] Producst Total CPU difference: 7688.758886599963 / 7720.302288799964 [-0.41%] Linux: OCCT Total CPU difference: 19451.89000000023 / 19456.560000000376 [-0.02%] Products Total CPU difference: 7703.40000000009 / 7725.120000000072 [-0.28%] Image differences : No differences that require special attention Memory differences : No differences that require special attention Updated test cases are OK |
|
Branch CR29053 has been deleted by kgv. SHA-1: 871ba1f99c2c043a107cac705c5bc31e9815be23 |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-08-25 17:57 | kgv | New Issue | |
2017-08-25 17:57 | kgv | Assigned To | => kgv |
2017-08-25 18:12 | git | Note Added: 0069930 | |
2017-08-27 11:18 | kgv | Note Added: 0069950 | |
2017-08-27 11:18 | kgv | Assigned To | kgv => bugmaster |
2017-08-27 11:18 | kgv | Status | new => resolved |
2017-08-27 11:18 | kgv | Status | resolved => reviewed |
2017-08-27 12:17 | bugmaster | Note Added: 0069951 | |
2017-08-27 12:17 | bugmaster | Status | reviewed => tested |
2017-08-28 14:51 | bugmaster | Test case number | => Not required |
2017-08-31 18:37 | bugmaster | Changeset attached | => occt master c0f08310 |
2017-08-31 18:37 | bugmaster | Status | tested => verified |
2017-08-31 18:37 | bugmaster | Resolution | open => fixed |
2017-09-04 18:20 | git | Note Added: 0070207 | |
2017-09-29 16:17 |
|
Fixed in Version | => 7.2.0 |
2017-09-29 16:23 |
|
Status | verified => closed |