0029053: Configuration, CMake - fix env.bat for starting Draw Harness for MinGW build